# libdlusb

./: AUTHORS  COPYRIGHT  Makefile.in  README  README.md  add_appt.c  add_chrono.c  add_contact.c  add_countdn.c  add_note.c  add_occasion.c  add_schedule.c  appt.c  chrono.c  comm.c  configure  configure.in  contact.c  define.h  del_appt.c  del_chrono.c  del_contact.c  del_countdn.c  del_note.c  del_occasion.c  del_schedule.c  dlusb.h  dlusbrc  dump_dlusb.c  export_chrono_csv.c  init_dlusb.c  init_dlusb.sh  load_dlusb.c  lock_dlusb.c  memory.c  misc.c  misc.h  note.c  note_to_contact.sh  occasion.c  (+28 more)
