# $Id: configure.in,v 1.6 2010/01/05 09:24:02 geni Exp $
#
# Copyright (c) 2005 Huidae Cho
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
# OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
# HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
# LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
# OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
# SUCH DAMAGE.

AC_INIT(README)

AC_SUBST(prefix)

AC_MSG_CHECKING(how to build library)
libtype=static
LIBDLUSB=libdlusb.a
STATIC=
SHARED=#
AC_ARG_ENABLE(shared,
[  --enable-shared         build and link with the shared library],
[
	case "$enableval" in
	"" | y*)
		libtype=shared
		LIBDLUSB=libdlusb.so
		STATIC=#
		SHARED=
		;;
	esac
])
AC_MSG_RESULT($libtype)
AC_SUBST(LIBDLUSB)
AC_SUBST(SHARED)
AC_SUBST(STATIC)

AC_MSG_CHECKING(which usb library to use)
usblib=libusb
LIBUSB=
LIBUSB_1_0=#
USBHID=#
AC_ARG_WITH(libusb1,
[  --with-libusb1          use the libusb 1.0 library],
[
	case "$withval" in
	"" | y*)
		usblib="libusb 1.0"
		LIBUSB=#
		LIBUSB_1_0=
		USBHID=#
	;;
	esac
])
AC_ARG_WITH(usbhid,
[  --with-usbhid           use the usbhid library],
[
	case "$withval" in
	"" | y*)
		usblib=usbhid
		LIBUSB=#
		LIBUSB_1_0=#
		USBHID=
	;;
	esac
])
AC_MSG_RESULT($usblib)
AC_SUBST(LIBUSB)
AC_SUBST(LIBUSB_1_0)
AC_SUBST(USBHID)

AC_OUTPUT(Makefile)
